Bug 550537: Use a different optimal operator for Direct2D. r=jrmuizel